examples/neg/coverage.effekt
module coverage

type Test {
  First();
  Second();
  Third()
}

def user(t: Test) = t match {
  case Second() => ()
}
